@@ -16,11 +16,9 @@ TODO (general):
 	-> or create a /32-interface which is routed in the network, so it is always the same
 - improve the parsing of framed routes and netmask
 - set routes over a socket and not over system (route add -net ...)
-- overflow of counters (bytesin , bytesout), datatypes in openvpn?
 - set timeouts for the ipc socket send and receive methods
 - exceptionhandling with try and catch
 - create a routing and ip class with correctness checking
-- MAKEfile
 - read config options from OpenVPN: 
 	- topology option
 	- username as common name
